<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/login_back" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:alpha=".8"
        android:background="@drawable/background_gradient_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?actionBarSize"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="TRILLBIT"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:textColor="@color/colorPrimary"
            android:textSize="34sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvFacebookLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:clickable="true"
            app:cardBackgroundColor="@color/facebook_button"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/tvFacebookLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_action_facebook"
                android:gravity="center_vertical|center"
                android:padding="8dp"
                android:text="@string/button_facebook_login"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
                android:textColor="@color/white" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvGoogleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cvFacebookLogin"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            app:cardBackgroundColor="@color/gplus_button"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/tvGoogleLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_action_gplus"
                android:gravity="center_vertical|center"
                android:padding="8dp"
                android:text="@string/button_google_login"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
                android:textColor="@color/white" />

        </android.support.v7.widget.CardView>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/pbLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cvGoogleLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:padding="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/terms_conditions"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:id="@+id/tvTermsConditions" />

    </RelativeLayout>

</FrameLayout>